Fix wrapping

--- a/Projekt2/public/styles.css
+++ b/Projekt2/public/styles.css
@@ -174,7 +174,7 @@ input[type="text"]:hover {
 }
 
 .passwords, #player-list {  
-    width: 1000px;
+    max-width: 1000px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
